# llm-challenge

./: .ant  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ui  Makefile  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  docker-compose.yaml  pyproject.toml  zzemp.py
migrations/: env.py
migrations/versions/: a78abad44567_add_user_and_conversation_and_document_.py
src/: main.py
src/api/: auth.py  document.py  router.py
src/core/: config.py  constants.py  dependencies.py  logging.py  security.py
src/models/: __init__.py  auth.py  chat.py  database.py  models.py
src/repository/: __init__.py  auth.py  document.py
src/schemas/: auth.py  common.py  document.py
src/services/: __init__.py  auth_service.py  document_service.py
src/storage/: azure_storage.py
src/ui/: api_consumer.py  app.py  consumer.py  helper.py
ui/: app.py
