[project]
name = "llm-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi==0.128.0",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "uvicorn==0.40.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "pyjwt==2.10.1",
    "streamlit==1.53.0",
    "azure-storage-blob>=12.26.0",
    "python-multipart>=0.0.20",
    "qdrant-client==1.16.2",
    "sentence-transformers==5.2.0",
    "azure-storage-queue>=12.15.0",
    "auto-mix-prep==0.2.0",
    "requests==2.32.5",
    "sqlalchemy==2.0.45",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.11",
]
